--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,13 @@
 Change log for bfilter
-$Id: CHANGES,v 1.1 2003/08/19 11:00:59 chris Exp $
+$Id: CHANGES,v 1.3 2004/04/18 14:04:45 chris Exp $
+
+0.3
+
+Fixed cleandb code. More error indications. Added tokeniser state machine
+diagram, mostly as an experiment in graphviz. Uses TDB rather than GDBM, for
+better concurrency. Does not use _ as a token separator when parsing
+X-Spam-Status: headers, so bfilter can make better use of test results added
+by Spam Assassin.
 
 0.2
 
