--- a/bfilter.1
+++ b/bfilter.1
@@ -153,9 +153,15 @@ Future versions of \fBbfilter\fP are likely to be more robust in this
 area.
 
 .SH SEE ALSO
-.BR sqlite3 (1),
+.BR sqlite3 (1)
+.PP
+https://github.com/TobyGoodwin/bfilter
 .br
-.IR https://github.com/TobyGoodwin/bfilter .
+http://www.paulgraham.com/antispam.html
+.br
+http://nlp.stanford.edu/IR-book/html/htmledition/naive-bayes-text-classification-1.html
+.br
+http://mpv6.com/posts/2015-11-15-bfilter.html
 
 .SH COPYRIGHT
 Copyright \(co 2003, 2004 Chris Lightfoot.
